[package]
name = "nom-methods"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
description = "nom combinators to use nom parsers as methods"
license = "MIT"
repository = "https://github.com/rust-bakery/nom-methods"
readme = "README.md"
documentation = "https://docs.rs/nom-methods"
keywords = ["parser", "parser-combinators", "parsing"]
categories = ["parsing"]

include = [
  "LICENSE",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs"
]

[dependencies]
nom = "^5.0.0-beta2"
